// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class Introspection Should able to define return type of method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": undefined,
          "kind": "Override",
          "type": Array [
            Number,
          ],
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": Array [
        Number,
      ],
      "typeClassification": "Array",
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should able to override type with other type 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Readonly",
              "kind": "Override",
              "type": OtherDummyClass,
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "dummy",
          "properties": Object {},
          "type": OtherDummyClass,
          "typeClassification": "Class",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect array on constructor parameters 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "kind": "Array",
            "type": EmptyClass,
            Symbol(tinspector:decoratorId): Symbol(array),
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": false,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "empty",
        "properties": Object {},
        "type": Array [
          EmptyClass,
        ],
        "typeClassification": "Array",
      },
    ],
  },
  "decorators": Array [
    Object {
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect array on method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "kind": "Array",
              "type": EmptyClass,
              Symbol(tinspector:decoratorId): Symbol(array),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "empty",
          "properties": Object {},
          "type": Array [
            EmptyClass,
          ],
          "typeClassification": "Array",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect array on method parameter but without type override 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "empty",
          "properties": Object {},
          "type": Array [
            Object,
          ],
          "typeClassification": "Array",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect array on method parameter using @reflect.type 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": undefined,
              "kind": "Override",
              "type": Array [
                EmptyClass,
              ],
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "empty",
          "properties": Object {},
          "type": Array [
            EmptyClass,
          ],
          "typeClassification": "Array",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect async method with parameters 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "properties": Object {},
          "type": String,
          "typeClassification": "Primitive",
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "properties": Object {},
          "type": Object,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Promise,
      "typeClassification": "Class",
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect class properly 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect class with constructor parameters 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "id",
        "properties": Object {},
        "type": undefined,
        "typeClassification": undefined,
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "properties": Object {},
        "type": undefined,
        "typeClassification": undefined,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect class with method parameters 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "properties": Object {},
          "type": undefined,
          "typeClassification": undefined,
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "properties": Object {},
          "type": undefined,
          "typeClassification": undefined,
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect constructor parameters type with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "id",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect deep nested destructed method parameter type 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": undefined,
              "kind": "Override",
              "type": Domain,
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "{ a, b, child: { c, d, child: { e, f } } }",
          "properties": Array [
            "a",
            "b",
            Object {
              "child": Array [
                "c",
                "d",
                Object {
                  "child": Array [
                    "e",
                    "f",
                  ],
                },
              ],
            },
          ],
          "type": Domain,
          "typeClassification": "Class",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect destructed method parameter type 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": undefined,
              "kind": "Override",
              "type": Domain,
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "{ date, name }",
          "properties": Array [
            "date",
            "name",
          ],
          "type": Domain,
          "typeClassification": "Class",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect destructed parameters type with method decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "par",
          "properties": Object {},
          "type": String,
          "typeClassification": "Primitive",
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "{ date, name }",
          "properties": Array [
            "date",
            "name",
          ],
          "type": Domain,
          "typeClassification": "Class",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect getter and setter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get myProp,
      "kind": "Property",
      "name": "myProp",
      "set": set myProp,
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect getter and setter with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": get myProp,
      "kind": "Property",
      "name": "myProp",
      "set": set myProp,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect parameter properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "myProp",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "myOtherProp",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "myProp",
      "set": undefined,
      "type": Number,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "myOtherProp",
      "set": undefined,
      "type": String,
    },
  ],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect parameters type with method decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "properties": Object {},
          "type": String,
          "typeClassification": "Primitive",
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "properties": Object {},
          "type": Object,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "myProp",
      "set": undefined,
      "type": Number,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "myOtherProp",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Class Introspection Should inspect setter only 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "myProp",
      "set": set myProp,
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "super": Object,
  "type": DummyClass,
  "typeClassification": "Class",
}
`;
